# nokogiri-rs

./: Cargo.toml  rustfmt.toml
.github/workflows/: release.yml  test.yml
src/: config.rs  core.rs  main.rs  resource.rs  server.rs
src/core/: cache.rs  request.rs  sentry.rs  summary.rs
src/core/request/: resolver.rs  robotstxt.rs
src/core/summary/: def.rs  handler.rs  selector.rs  summarize.rs  utility.rs
src/core/summary/handler/: amazon.rs  branchio.rs  general.rs  reddit.rs  skeb.rs  spotify.rs  twitter.rs  wikipedia.rs  youtube.rs
src/resource/: config.default.toml
src/server/: route.rs
src/server/route/: index.rs  robots.rs  url.rs
