[package]
name = "nokogiri-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { git = "https://github.com/tokio-rs/axum.git", branch = "dm/matchit-8-6" } # FIXME
axum-extra = "*"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = "0.43"
urlencoding = "2.1"
regex = "1.11"
url = "2.5"
once_cell = "1.21"
config = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "cookies"]}
scraper = { version = "0.24", features = ["atomic"] }
htmlentity = "1.3"
futures = "0.3"
http-acl-reqwest = "0.10"
reqwest-middleware = "0.4"
hyper-util = "0.1"
hickory-resolver = "0.25"
