[package]
name = "nokogiri-rs"
version = "2025.10.4"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.8"
axum-extra = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.45", features = ["tracing", "anyhow", "tower-axum-matched-path"]}
urlencoding = "2.1"
regex = "1.12"
url = "2.5"
once_cell = "1.21"
config = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "cookies"]}
scraper = { version = "0.24", features = ["atomic"] }
htmlentity = "1.3"
futures = "0.3"
http-acl-reqwest = { git = "https://github.com/hideki0403/http-acl.git", branch = "main" }
reqwest-middleware = "0.4"
hyper-util = "0.1"
hickory-resolver = "0.25"
redis = { version = "0.32", features = ["tokio-comp"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
texting_robots = "0.2"
parse-size = "1.1"
